--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+html,body{
+    height:100%;
+    margin:0;
+    display:flex;
+    flex-direction: column;
+}
+main{
+    flex:1;
+}
 .icon{
     height:38px;
 }
