--- a/css/style.css
+++ b/css/style.css
@@ -176,3 +176,16 @@ a.header_btn:hover{
     border-radius: 10%;
     color:#1a1f2b!important;
 }
+
+@keyframes fadein {
+    from{
+        opacity:0;
+    }
+    to{
+        opacity:1;
+    }
+}
+
+.fadein{
+    animation:fadein 0.3s ease-in-out;
+}
